# typhoon

./: LICENCE  README.md  README.sk.md  Typhon_sachovnica_posledna _05_04_rozmer_poli.py  Untitled-1.py  arduino.inc  arduino.ino  arduino_original.ino  binary_number.py  binary_number_random.py  board_test.py  chess_gui.py  data.txt  detekcia.py  digital_number.py  geogebra.ggb  pyproject.toml  pyvenv.cfg  requirements.txt  settings.py  tempCodeRunnerFile.py  test.py  typhoon.py  typhoon_28_5.py  typhoon_29_5.py  typhoon_chess.py  typhoon_chess_gui.py
Scripts/: activate  activate.bat
typhoon/: __init__.py  calculations.py  communication.py  config.py  main.py
typhoon/gui/: colors.py  config.py
typhoon/gui/components/: __init__.py  button.py  text_input.py
typhoon/gui/pages/typhoon_chess/: config.json
typhoon/gui/pages/typhoon_chess/components/: __init__.py
typhoon/gui/pages/typhoon_chess/pages/: __init__.py  paint.py
typhoon/utils/: __init__.py  calculations.py  communication.py  config.py
typhoon_chess/: config.json  requirements.txt
typhoon_chess/assets/: board_colors.json
typhoon_chess/gui/: main.py
typhoon_chess/gui/components/: __init__.py  board_theme.py  button.py
typhoon_chess/gui/pages/: __init__.py  board_themes.py  home.py  play.py
typhoon_gui/: main.py
typhoon_gui/pages/typhoon_binary/: config.json
typhoon_gui/pages/typhoon_binary/gui/: main.py
typhoon_gui/pages/typhoon_chess/pages/: home.py  play.py
